<resources>
    <string name="app_name">Weather</string>
    <string name="time">20:52</string>
    <string name="city">San Jose</string>
    <string name="temp">18°C</string>
    <string name="delete">DEL</string>
    <string name="setting">Setting</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="returnHome">Return Home</string>
    <string name="edit">Edit</string>
    <string name="addHere">Add Here</string>
    <string name="refresh">Refresh</string>
    <string name="local_service_started">Starting GPS</string>
    <string name="local_service_stopped">Stopping GPS</string>
    <string name="here"></string>
    <string name="youarehere">You are here!</string>
</resources>
