<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#66FFFFFF"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/textCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30sp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/textTemperature"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/temp"
        android:textColor="@color/black"
        android:textSize="40sp"/>

</LinearLayout>
