<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/setting"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"/>

    <RadioGroup
        android:id="@+id/tempGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radioFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/fahrenheit"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <RadioButton
            android:id="@+id/radioCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/celsius"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </RadioGroup>

</RelativeLayout>
